--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <!-- CONTACTO -->
 <!-- Inicia NAV -->
-    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top" id="botonera">
+    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top opacity-75" id="botonera">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
             <img src="./img/logo.jpg" class="logoBorder" alt="Logo Pizzeria">
@@ -55,7 +55,7 @@
       <img src="./img/mesa_dulce_cumpleaños.jpg" class="d-block w-100" alt="Mesas dulces">
     </div>
     <div class="carousel-item">
-      <img src="./img/pizzas_pedidos.jpg" class="d-block w-100" alt="Pizzas">
+      <img src="./img/catering_2.jpg" class="d-block w-100 carouselImg" alt="Catering salado">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -72,36 +72,36 @@
 <section>
         <div class="container-fluid bg-white">
             <h1 class="p-2 m-2 text-center logoColor">Bienvenidos a Pizzeria Doña Coya</h1>
-            <p class="text-center">Bienvenidos a nuestra Pagina Web donde podras Conocernos, ver nuestros Productos y Servicios.</p>
+            <p class="text-center p-2 m-2">Bienvenidos a nuestra Pagina Web donde podras Conocernos, ver nuestros Productos y Servicios.</p>
         </div>  
 
         <div class="container bg-white">
-            <h2 class="text-center">Nuestros Servicios</h2>
+            <h2 class="text-center p-2 m-2">Nuestros Servicios</h2>
         </div>
 
     <article>
             <div class="gridContainer">
-                <h3 class="text-start fs-4 text-decoration-underline font-effect-shadow-multiple logoColor">
+                <h3 class="text-start fs-4 font-effect-shadow-multiple logoColor p-4 m-4">
                   𝐂𝐮𝐛𝐫𝐢𝐦𝐨𝐬 𝐭𝐮𝐬 𝐞𝐯𝐞𝐧𝐭𝐨𝐬 𝐦á𝐬 𝐢𝐦𝐩𝐨𝐫𝐭𝐚𝐧𝐭𝐞𝐬
                 </h3>
-                    <p class="text-start fs-6">Junto con nuestro equipo de trabajo nos ocupamos de Preparar todo para tu evento y que tanto vos como tus comensales se ocupen unicamente de crear un recuerdo hermoso.</p>
+                    <p class="text-start fs-6 p-4 m-4">Junto con nuestro equipo de trabajo nos ocupamos de Preparar todo para tu evento y que tanto vos como tus comensales se ocupen unicamente de crear un recuerdo hermoso.</p>
                     <img src="./img/eventos_1.jpg" class="img" alt="Servicios de Catering">
             </div> 
 
             <div class="gridContainer"> 
-                <h3 class="text-start fs-4 text-decoration-underline font-effect-shadow-multiple logoColor">
+                <h3 class="text-start fs-4 font-effect-shadow-multiple logoColor p-4 m-4">
                   𝐂𝐨𝐧𝐭𝐚𝐦𝐨𝐬 𝐜𝐨𝐧 𝐒𝐞𝐫𝐯𝐢𝐜𝐢𝐨 𝐝𝐞 𝐃𝐞𝐥𝐢𝐯𝐞𝐫𝐲 𝐩𝐚𝐫𝐚 𝐪𝐮𝐞 𝐫𝐞𝐜𝐢𝐛𝐚𝐬 𝐭𝐮 𝐂𝐞𝐧𝐚 𝐬𝐢𝐧 𝐦𝐨𝐯𝐞𝐫𝐭𝐞 𝐝𝐞 𝐭𝐮 𝐜𝐚𝐬𝐚
                 </h3>
-                <p class="text-start fs-6">No dudes en moverte de tu casa, nosotros te facilitamos todo, contamos con servicio de delivery para que en los de frio o calor no tengas que hacer nada mas que esperar tu comida</p>
+                <p class="text-start fs-6 p-4 m-4">No dudes en moverte de tu casa, nosotros te facilitamos todo, contamos con servicio de delivery para que en los de frio o calor no tengas que hacer nada mas que esperar tu comida</p>
 
                     <img src="./img/pizzas_pedidos.jpg" class="img" alt="Pedido de Pizzas">
             </div> 
 
             <div class="gridContainer">  
-                <h3 class="text-start fs-4 text-decoration-underline font-effect-shadow-multiple logoColor">
+                <h3 class="text-start fs-4 font-effect-shadow-multiple logoColor p-4 m-4">
                   𝐓𝐞 𝐠𝐮𝐢𝐚𝐦𝐨𝐬 𝐩𝐚𝐫𝐚 𝐪𝐮𝐞 𝐯𝐨𝐬 𝐭𝐚𝐦𝐛𝐢𝐞𝐧 𝐩𝐮𝐞𝐝𝐚𝐬 𝐫𝐞𝐚𝐥𝐢𝐳𝐚𝐫 𝐥𝐚𝐬 𝐫𝐞𝐜𝐞𝐭𝐚𝐬 𝐝𝐞 𝐥𝐚 𝐍𝐨𝐧𝐚
                 </h3>
-                <p class="text-start fs-6">Contamos con una amplia variedad de Recetas para que puedas poner en practica tus capacidades culinarias y lo mejor de todo es que son las recetas magicas de la Nona</p>
+                <p class="text-start fs-6 p-4 m-4">Contamos con una amplia variedad de Recetas para que puedas poner en practica tus capacidades culinarias y lo mejor de todo es que son las recetas magicas de la Nona</p>
                 <img src="./img/sobre_nosotros.jpeg" class="img" alt="Abuela Cocinando">
             </div>    
     </article>    
@@ -150,7 +150,7 @@
         </section>
 <!-- Termina segunda Section -->
 <!-- Inicia Footer -->
-<footer class="container-fluid d-flex justify-content-center">
+<footer class="container-fluid d-flex justify-content-center p-5">
   <a href="#">
         <img src="img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
         </a>    
