--- a/pages/productos.html
+++ b/pages/productos.html
@@ -22,7 +22,7 @@
 <!-- CONTACTO -->
 
     <!-- Inicia NAV -->
-    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top" id="botonera">
+    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top opacity-75" id="botonera">
       <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
             <img src="../img/logo.jpg" class="logoBorder" alt="Logo Pizzeria">
@@ -54,27 +54,27 @@
                 Empanadas de la Nona
                 </h3>
                 <div class="gridContainerProductosEmpanadas text-start p-4 m-4">
-                  <div class="Box1">
+                  <div class="Box1 p-2 m-2">
                       <h4>Verdura</h4>
                       <p>Acelga, Salsa Bechamel y Queso</p>
                   </div>
-                  <div class="Box2">
+                  <div class="Box2 p-2 m-2">
                       <h4>Carne</h4>
                       <p>Carne cortada a cuchillo, Cebolla, Morron rojo y Especias</p>
                   </div>
-                  <div class="Box3">
+                  <div class="Box3 p-2 m-2">
                       <h4>Pollo</h4>
                       <p>Pollo trozado, Cebolla, Morron rojo y Especias</p>
                   </div>
-                  <div class="Box4">
+                  <div class="Box4 p-2 m-2">
                       <h4>Humita</h4>
                       <p>Choclo cremoso, Cebolla, Morron Rojo y Queso</p>
                   </div>
-                  <div class="Box5">
+                  <div class="Box5 p-2 m-2">
                       <h4>Jamon y Queso</h4>
                       <p>Jamon picado, Queso Cremoso </p>
                   </div>
-                  <div class="Box6">
+                  <div class="Box6 p-2 m-2">
                     <h4>Especial de la Nona</h4>
                     <p>Panceta picada, Ciruelas y Queso</p>
                   </div>
@@ -86,27 +86,27 @@
                 Las mejores Pizzas de Longchamps
                 </h3>
                 <div class="gridContainerProductosPizza text-start p-4 m-4">
-                  <div class="Box1">
+                  <div class="Box1 p-2 m-2">
                       <h4>Rúcula con Jamón Crudo</h4>
                       <p>Salsa de tomate, muzzarella, tomates secos hidratos, jamón crudo y rúcula fresca. Se sirve con orégano y aceitunas verdes descarozadas</p>
                   </div>
-                  <div class="Box2">
+                  <div class="Box2 p-2 m-2">
                       <h4>Roquefort</h4>
                       <p>Salsa de tomate, muzzarella y queso azul. Se sirve con orégano y aceitunas verdes descarozadas. Puede ser Grande, chica o individual.</p>
                   </div>
-                  <div class="Box3">
+                  <div class="Box3 p-2 m-2">
                       <h4>Palmitos con Jamón</h4>
                       <p>Salsa de tomate, muzzarella, palmitos, huevo picado y jamón cocido natural. Opcional Salsa golf. Se sirve con orégano y aceitunas verdes.</p>
                   </div>
-                  <div class="Box4">
+                  <div class="Box4 p-2 m-2">
                       <h4>Jamón y Morrones</h4>
                       <p>Salsa de tomate, muzzarella, morrones asados y jamón cocido natural. Se sirve con orégano y aceitunas verdes descarozadas.</p>
                   </div>
-                  <div class="Box5">
+                  <div class="Box5 p-2 m-2">
                       <h4>Muzzarella</h4>
                       <p>Salsa de tomate y muzzarella. Se sirve con orégano y aceitunas verdes descarozadas. Puede ser Grande, chica o individual. </p>
                   </div>
-                  <div class="Box6">
+                  <div class="Box6 p-2 m-2">
                     <h4>Fugazzetta</h4>
                     <p>Rodajas de cebolla y muzzarella. Se sirve con orégano y aceitunas verdes descarozadas. Puede ser Grande, chica o individual.</p>
                   </div>
@@ -117,7 +117,7 @@
 </section>
 <!-- Termina Section -->
 <!-- Inicia Footer -->
-<footer class="container-fluid d-flex justify-content-center">
+<footer class="container-fluid d-flex justify-content-center p-5">
     <a href="#">
         <img src="../img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
         </a>    
