--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -22,7 +22,7 @@
 <!-- CONTACTO -->
 
     <!-- Inicia NAV -->
-    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top" id="botonera">
+    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top opacity-75" id="botonera">
       <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
             <img src="../img/logo.jpg" class="logoBorder" alt="Logo Pizzeria">
@@ -55,7 +55,7 @@
                 </h2>
               <div class="row">
                    <div class="col-lg-6 col-sm-12">
-                <img src="../img/budin_pan_recetas.jpg" class="imgSize container" alt="Budin de Pan">
+                <img src="../img/budin_pan_recetas.jpg" class="imgSize img container" alt="Budin de Pan">
                   </div>
                     <div class="col-lg-6">
                       <div class="accordion" id="accordionExample">
@@ -113,7 +113,7 @@
               </h2>
             <div class="row">
                  <div class="col-lg-6 col-sm-12">
-              <img src="../img/recetas_nona.jpg" class="imgSize container" alt="Budin de Pan">
+              <img src="../img/recetas_nona.jpg" class="imgSize img container" alt="Budin de Pan">
                 </div>
                   <div class="col-lg-6">
                     <div class="accordion" id="accordionExample">
@@ -165,7 +165,7 @@
 </section>
 <!-- Termina Section -->
 <!-- Inicia Footer -->
-<footer class="container-fluid d-flex justify-content-center">
+<footer class="container-fluid d-flex justify-content-center p-5">
   <a href="#">
         <img src="../img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
         </a>    
