--- a/pages/servicios_catering.html
+++ b/pages/servicios_catering.html
@@ -22,7 +22,7 @@
 <!-- CONTACTO -->
 
     <!-- Inicia NAV -->
-    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top" id="botonera">
+    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top opacity-75" id="botonera">
       <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
             <img src="../img/logo.jpg" class="logoBorder" alt="Logo Pizzeria">
@@ -43,31 +43,38 @@
        <!-- Termina NAV -->
  <!-- Inicia Section -->
 <section>
-        <div class="boxForm2">
+        <div class="text-center container-fluid">
             <h1>SERVICIOS DE CATERING</h1>
         </div>
 
     <article>
-            <div class="gridContainer">
-                <h3>
+                <h3 class="text-center text-lg-start p-3 m-3 logoColor container-fluid">
                     Catering Salados
                 </h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                    <img src="../img/catering_salado.jpg" class="img" alt="Servicios de Catering">
+            <div class="row m-2 p-2 justify-content container-fluid">
+                <div class="col-lg-6 col-sm-12">
+                    <img src="../img/catering_salado.jpg" class="img w-100" alt="Servicios de Catering">
+                </div>
+                <div class="col-lg-5 col-sm-12 text-center">
+                    <p>Pizzeria Doña Coya hará que ustedes y sus invitados tengan una experiencia llena de sabores. La empresa cuenta con una amplia trayectoria en el sector gastronómico y gracias a eso prepara exquisitos bocados para eventos tan importantes como el de su casamiento. Un amplio menú pondrá su servicio con el fin de crear el mejor momento culinario.</p>
+                </div>
             </div> 
-
-            <div class="gridContainer"> 
-                <h3>
+                <h3 class="text-center text-lg-start p-3 m-3 logoColor container-fluid">
                   Mesas Dulces
                 </h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
 
-                    <img src="../img/mesa_dulce_catering.jpeg" class="img" alt="Mesa Dulce">
+            <div class="row m-2 p-2 justify-content container-fluid">
+              <div class="col-lg-5 col-sm-12 text-center">
+                  <p>Pizzeria Doña Coya tiene la solución perfecta para su evento. Esta empresa familiar, dedicada a ofrecer servicios gastronómicos de primera calidad, fusiona los sabores dulces más auténticos con una atención sin igual para contribuir con su quehacer a la realización de una fiesta única e irrepetible, que será un deleite para todos los sentidos.</p>
+              </div>
+              <div class="col-lg-6 col-sm-12">
+                    <img src="../img/postres_2.jpg" class="img w-100" alt="Mesa Dulce">
+              </div>    
             </div> 
 </section>
 <!-- Termina Section -->
 <!-- Inicia Footer -->
-    <footer class="container-fluid d-flex justify-content-center">
+    <footer class="container-fluid d-flex justify-content-center p-5">
         <a href="#">
         <img src="../img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
         </a>    
