--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -22,7 +22,7 @@
 <!-- CONTACTO -->
 
     <!-- Inicia NAV -->
-    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top" id="botonera">
+    <nav class="navbar navbar-expand-sm bg-white text-black sticky-top opacity-75" id="botonera">
       <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
             <img src="../img/logo.jpg" class="logoBorder" alt="Logo Pizzeria">
