--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -48,22 +48,28 @@
  <!-- Termina Header -->
  <!-- Inicia Section -->
 <section>
-        <div class="boxForm2">
-            <h1 class>¿Como Comenzo Todo?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam magni repellat molestiae voluptatem asperiores nulla unde. Praesentium temporibus, adipisci nesciunt eligendi nemo rem placeat odit consectetur iure perspiciatis quis delectus?</p>
+        <div class="container-fluid p-4 m-4 row logoColor">
+            <h1 class="text-center ">¿Como Comenzo Todo?</h1>
+            <p>Pizzeria Doña Coya fue inaugurada en el año 2011 por su fundadora y Dueña Alejandra Gabriela Diaz, quien es la encargada de que los comensales disfruten sus exquisiteces y magnificas creaciones.</p>
         </div>  
 
-        <div class="boxForm2">
-            <h2>Alejandra Gabriela Diaz Fundadora</h2>
+        <div class="container-fluid p-4 m-2 text-center">
+            <h2>Alejandra Gabriela Diaz Fundadora de un Sueño</h2>
         </div>
 
     <article>
-            <div class="gridContainer">
-              <h3 class="text-start fs-4 text-decoration-underline">
+            <div class="container-fluid p-4 m-4 text-center text-lg-start">
+              <h3>
                 Logros Obtenidos
               </h3>
-                    <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-                    <img src="../img/logros_obtenidos.jpg" class="img" alt="Servicios de Catering">
+            </div>
+              <div class="row container-fluid p-3 m-3">
+                <div class="col-lg-6 col-sm-12">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                </div>
+                <div class="col-lg-5 col-sm-12">
+                    <img src="../img/logros_obtenidos.jpg" class="img w-100" alt="Servicios de Catering">
+                </div>
             </div> 
 
             <div class="gridContainer"> 
