--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -58,7 +58,7 @@
         </div>
 
     <article>
-            <div class="container-fluid p-4 m-4 text-center text-lg-start">
+            <div class="container-fluid p-4 m-4 text-center text-lg-start logoColor">
               <h3>
                 Logros Obtenidos
               </h3>
