--- a/pages/productos.html
+++ b/pages/productos.html
@@ -118,11 +118,11 @@
 <!-- Termina Section -->
 <!-- Inicia Footer -->
 <footer class="container-fluid d-flex justify-content-center p-5">
-    <a href="#">
+    <a href="https://www.instagram.com/pizzeriadonacoya/">
         <img src="../img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
         </a>    
-        <a href="#">
-        <img src="../img/facebook_logo.png" alt="Logo Facebook" height="50px" width="50px">
+        <a href="https://www.facebook.com/pizeria.donacoya">
+          <img src="../img/facebook_logo.png" alt="Logo Facebook" height="50px" width="50px">
         </a>    
     </footer>
 <!-- Termina Footer -->
