--- a/pages/sobre_nosotros.html
+++ b/pages/sobre_nosotros.html
@@ -50,7 +50,7 @@
 <section>
         <div class="container-fluid p-4 m-4 row logoColor">
             <h1 class="text-center ">¿Como Comenzo Todo?</h1>
-            <p>Pizzeria Doña Coya fue inaugurada en el año 2011 por su fundadora y Dueña Alejandra Gabriela Diaz, quien es la encargada de que los comensales disfruten sus exquisiteces y magnificas creaciones.</p>
+            <p>Pizzeria Doña Coya fue inaugurada en el año 2008 por su fundadora y Dueña Alejandra Gabriela Diaz, quien es la encargada de que los comensales disfruten sus exquisiteces y magnificas creaciones.</p>
         </div>  
 
         <div class="container-fluid p-4 m-2 text-center">
@@ -58,45 +58,50 @@
         </div>
 
     <article>
-            <div class="container-fluid p-4 m-4 text-center text-lg-start logoColor">
-              <h3>
+              <h3 class="text-center text-lg-start fs-4 logoColor p-4 m-2">
                 Logros Obtenidos
               </h3>
-            </div>
-              <div class="row container-fluid p-3 m-3">
+              <div class="row container-fluid p-4 m-2">
                 <div class="col-lg-6 col-sm-12">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+                    <p>Consideramos que nuestros mayores logros ademas de hacer felices a las familias con nuestros servicios brindados fue perdurar en el tiempo manteniendo la calidad y la buena atencion haciendo que nuestros clientes nos vuelvan a elegir siempre.</p>
                 </div>
                 <div class="col-lg-5 col-sm-12">
                     <img src="../img/logros_obtenidos.jpg" class="img w-100" alt="Servicios de Catering">
                 </div>
             </div> 
 
-            <div class="gridContainer"> 
-              <h3 class="text-start fs-4 text-decoration-underline">
+              <h3 class="text-center text-lg-start fs-4 logoColor p-4 m-2">
                 Valores
               </h3>
-                <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
-
-                    <img src="../img/valores.jpg" class="img" alt="Valores">
+            <div class="row container-fluid p-4 m-2">
+              <div class="col-lg-6 col-sm-12">
+                <p>Nuestros valores son tambien nuestras virtudes, la responsabilidad, el buen trato y destacarnos de la mejor manera siempre es lo que nos hace ser quien somos.</p>
+              </div>
+              <div class="col-lg-5 col-sm-12">
+                    <img src="../img/valores.jpg" class="img w-100" alt="Valores">
+              </div>
             </div> 
 
-            <div class="gridContainer">  
-              <h3 class="text-start fs-4 text-decoration-underline">
+              <h3 class="text-center text-lg-start fs-4 logoColor p-4 m-2">
                 Servicios Destacados
               </h3>
-                <p class="gridP">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, perspiciatis architecto suscipit minus eum illo. Fuga aliquam hic illum dicta voluptatibus ex rerum? Harum neque quibusdam placeat enim, consequuntur laborum.</p>
+            <div class="row container-fluid p-4 m-2">
+              <div class="col-lg-6 col-sm-12">
+                <p class="gridP">Contamos con una amplia variedad de servicios culinarios entre ellos Servicios de catering tanto salados como mesas dulces pero lo que mas destaca en nosotros es nuestro amor por la gastronomia de forma diaria en nuestra Pizzeria, que no solo es hacer una pizza sino el amor que le ponemos a lo que hacemos.</p>
+              </div>
+              <div class="col-lg-5 col-sm-12">
                 <img src="../img/servicios_destacados.jpg" class="img" alt="Libro de recetas">
+              </div>
             </div>    
     </article>    
 </section>
 <!-- Termina Section -->
 <!-- Inicia Footer -->
 <footer class="container-fluid d-flex justify-content-center">
-  <a href="#">
+  <a href="https://www.instagram.com/pizzeriadonacoya/">
         <img src="../img/instagram_logo.png" alt="Logo Instagram" height="50px" width="50 px">
         </a>    
-        <a href="#">
+        <a href="https://www.facebook.com/pizeria.donacoya">
         <img src="../img/facebook_logo.png" alt="Logo Facebook" height="50px" width="50px">
         </a>    
     </footer>
